--- a/assets/style.css
+++ b/assets/style.css
@@ -67,14 +67,16 @@ a {
  p {
      margin: auto;
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
     align-content: center;
     padding: 20px;
  }
 
  #p-container {
     margin: auto;
-    width: 45%;
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
     position: relative;
     display: flex;
     align-content: center;
@@ -104,4 +106,4 @@ button:hover {
  font-size: 18px;
  padding-top: 5px 0 10px 0;
  text-align: center;
-}
+} 
