--- a/assets/style.css
+++ b/assets/style.css
@@ -13,12 +13,14 @@ a {
     color: var(--tertiary-color);
     text-decoration: none;
     font-size: 20px;
+    line-height: 1.5;
 }
 .score-box-style a {
     align-content: center;
     font-weight: 500;
     color: var(--tertiary-color);
-    
+    line-height: 1.5;
+
 }
 
 #score-box-container {
@@ -33,13 +35,14 @@ a {
     margin-left: 20px;
 }
 
-.time-style {
+h3 .time_style {
     align-content: center;
     font-size: 20px;
+    font-weight: lighter;
 }
 
 
-#time-box-container {
+ #timer {
     display: inline-flex;
     margin-top: 10px;
     margin-right: 30px;
@@ -100,10 +103,13 @@ button:hover {
     background-color: magenta;
 }
 
-.button-style {
+.startBtnStyle {
  height: 60px;
  width: 150px;
  font-size: 18px;
  padding-top: 5px 0 10px 0;
  text-align: center;
+ line-height: 1.5;
+
 } 
+
